refactor: refatorando tipo de remoção a ser feita, e corrigindo pequenas lógicas de remoção para a regra de negócio. Removendo vídeo da Coca-Cola que é vinculado ao gênero Publicidade. Cascata desligada e ligada funcionando.